# marknote

./: .gitignore  README.md  README.md.html  README_EN.md  index.html  package-lock.json  package.json  test.md  vite.config.ts  vite.config.ts.timestamp-1694998276472-5fdcfbb653231.mjs
.github/workflows/: release.yml
docs/: markdown.md  marknote.docx  marknote.html  marknote.md
scripts/: update.mjs
src/: App.vue  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: log_conf.rs  main.rs  resp.rs
src-tauri/src/cmd/: dialog.rs  file.rs  mod.rs  preferences.rs  utils.rs  window.rs
src-tauri/src/db/: mod.rs
src-tauri/src/model/: config.rs  mod.rs
src-tauri/src/utils/: constant.rs  md.rs  mod.rs  pdf.rs  schema.rs
src-tauri/themes/: dark.json  light.json
src/api/: dialog.ts  file.ts  preferences.ts  utils.ts  window.ts
src/components/: About.vue  Editor.vue  EditorView.ts  Folder.vue  InputRules.ts  Layout.vue  Outliner.vue  Outliner2.vue  Preference.vue  Preferences.vue  Toc.vue  WysiwygEditor.vue  schema.ts
src/components/bubble/: BubbleTable.vue
src/components/contextMenu/: index.vue  useContextMenu.ts
src/components/dialog/: KatexDialog.vue  LinkDialog.vue  index.vue
src/components/input/: AutoWidthInput.vue
src/components/menu/: index.vue
src/components/preferences/: Editor.vue  General.vue  Image.vue  Language.vue  Theme.vue
src/components/sidebar/: Sidebar.vue  useDragSidebar.ts
src/components/titlbar/: index.vue  mac.vue  windows.vue
src/components/titlebar/: index.vue  mac.vue  windows.vue
src/directives/loading/: index.scss  index.ts
src/extensions/: bold.ts  code.ts  codeBlock.ts  codeBlock2.ts  html.ts  image.ts  inlineKatex.ts  italic.ts  katex.ts  link.ts  strike.ts  table.ts  tableCell.ts  tableHeader.ts  tableOfContents.ts  tableRow.ts
src/extensions/markdown/: Markdown.js  index.ts
src/extensions/markdown/extensions/: index.js
src/extensions/markdown/extensions/nodes/: heading.js  inlineKatex.ts  katex.ts
src/extensions/markdown/parse/: MarkdownParser.js
src/extensions/markdown/serialize/: MarkdownSerializer.js
src/extensions/menu/: index.vue
src/extensions/menu/link/: index.vue
src/extensions/utils/: mark.ts
src/extensions/wrapper/: CodeBlockWrapper.vue  ImageWrapper.vue  InlineKatexWrapper.vue  KatexWrapper.vue  LinkPopover.vue  TableCellPopover.vue  TableOfContents.vue  TableRowPopover.vue
src/i18n/: index.ts
src/i18n/locale/: cn.js  en.js  zhCn.js
src/node/: Editor.vue  Editor2.vue  codeBlock.ts  codeBlock2.ts  focus.ts  heading.ts  image.ts  link.ts  strike.ts  table.ts  tableCell.ts  tableHeader.ts
src/node/hook/: useAttributes.ts
src/node/menu/link/: index.vue
src/node/utils/: VueNodeViewRenderer.ts  node.ts  table.ts
src/node/wrapper/: CodeBlockWrapper.vue  ImageWrapper.vue  LinkWrapper.vue  TableCellPopover.vue  TableRowPopover.vue
src/scss/: codeTheme.scss  editor.scss  element-plus.scss  menu.scss
src/store/: app.ts  editor.ts  editor2.ts  menu.ts  preferences.ts
src/theme/: index.ts
src/theme/style/: dark.ts  light.ts
src/utils/: editor.ts  index.ts  keyBinding.ts  lowlight.ts  parser.ts
