[package]
name = "marknote"
version = "0.0.4"
description = "MarkNote"
authors = ["cedar12.zxd@qq.com"]
license = "MIT"
repository = "https://github.com/cedar12/marknote"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "global-shortcut-all", "process-relaunch", "updater", "protocol-all", "window-set-title", "notification-all", "window-set-always-on-top", "clipboard-write-text", "clipboard-read-text", "process-exit", "path-all", "dialog-all", "window-maximize", "window-minimize", "window-unminimize", "window-hide", "window-close", "window-start-dragging", "window-unmaximize", "window-show", "os-all", "shell-open", "global-shortcut"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
image = "0.24.6"
mime_guess = "2.0.4"
reqwest = { version = "0.11",features = ["blocking", "json", "multipart"] }
anyhow = "1.0.75"
rusqlite = { version = "0.29.0", features = ["bundled"] }
lazy_static = "1.4.0"
window-shadows = "0.2.1"
chrono="0.4.31"
log = "0.4.14"
log4rs = "1.0.0"
cron="0.5"

#[target.'cfg(windows)'.dependencies]
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
