[package]
name = "marknote"
version = "0.0.4"
description = "MarkNote"
authors = ["cedar12.zxd@qq.com"]
license = "MIT"
repository = "https://github.com/cedar12/marknote"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.9", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.11", features = [ "protocol-asset"] }
tauri-plugin-dialog = "2.0.0-alpha"
tauri-plugin-window="2.0.0-alpha"
tauri-plugin-notification="2.0.0-alpha"
tauri-plugin-os="2.0.0-alpha"
tauri-plugin-updater = "2.0.0-alpha"
tauri-plugin-process = "2.0.0-alpha"
tauri-plugin-app = "2.0.0-alpha"
tauri-plugin-clipboard-manager = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
image = "0.24.6"
mime_guess = "2.0.4"
reqwest = { version = "0.11",features = ["blocking", "json", "multipart"] }
anyhow = "1.0.75"
rusqlite = { version = "0.29.0", features = ["bundled"] }
lazy_static = "1.4.0"
window-shadows = "0.2.1"
chrono="0.4.31"
log = "0.4.14"
log4rs = "1.0.0"
cron="0.5"
dirs-next="2.0.0"
url = "2"

#[target.'cfg(windows)'.dependencies]
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"

#[lib]
#crate-type = ["staticlib", "cdylib", "rlib"]
