[package]
name = "marknote"
version = "0.0.5"
description = "MarkNote"
authors = ["cedar12.zxd@qq.com"]
license = "MIT"
repository = "https://github.com/cedar12/marknote"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.10", features = [] }

#[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]


[dependencies]
tauri = { version = "2.0.0-alpha.16", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.0-alpha.2"
tauri-plugin-window="2.0.0-alpha.2"
tauri-plugin-notification = "2.0.0-alpha.4"
tauri-plugin-updater = "2.0.0-alpha.2"
tauri-plugin-process = "2.0.0-alpha.2"
tauri-plugin-app = "2.0.0-alpha.2"
tauri-plugin-clipboard-manager = "2.0.0-alpha.2"
tauri-plugin-shell = "2.0.0-alpha.2"
tauri-plugin-log = { version = "2.0.0-alpha.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
image = "0.24.6"
mime_guess = "2.0.4"
reqwest = { version = "0.11",features = ["blocking", "json", "multipart"] }
anyhow = "1.0.75"
rusqlite = { version = "0.29.0", features = ["bundled"] }
lazy_static = "1.4.0"
window-shadows = "0.2.1"
chrono="0.4.31"
log = "0.4.14"
log4rs = "1.0.0"
cron="0.5"
dirs-next="2.0.0"
url = "2"


[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-alpha"

#[target.'cfg(windows)'.dependencies]
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"

#[lib]
#crate-type = ["staticlib", "cdylib", "rlib"]
